--- a/Insurgency/Saved/Config/WindowsServer/Engine.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Engine.ini
@@ -20,3 +20,9 @@ HitchFrameTolerance=3
 bShowBreath=True
 bAlwaysNight=False
 bRandomLightingScenario=True
+
+;Support modding for server side
+;https://insurgencysandstorm.mod.io/guides/server-admin-guide
+[/Script/ModKit.ModIOClient]
+bHasUserAcceptedTerms=True
+AccessToken=[TOKEN]
