--- a/Insurgency/Saved/Config/WindowsServer/Game.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game.ini
@@ -54,6 +54,7 @@ WinLimit=1
 bMapVoting=True
 bUseMapCycle=True
 bFireSupportAllowed=True
+bAllowDeathCamera=True
 
 [/Script/Insurgency.INSCoopMode]
 bUseVehicleInsertion=True
