--- a/Insurgency/Saved/Config/WindowsServer/Game.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game.ini
@@ -64,6 +64,7 @@ MaximumEnemies=30 ; A very high bot count cripples frame rate
 MaxPlayersToScaleEnemyCount=10
 bLoseWhenAllPlayersDead=True
 bBotsUseHumanLoadouts=True ; Makes bots follow mutator settings
+bRestrictClassByPlayerLevel=False
 
 [/Script/Insurgency.INSCheckpointGameMode]
 RoundTime=720 ; Increased round time for each objective
