--- a/Insurgency/Saved/Config/WindowsServer/Engine.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Engine.ini
@@ -1,5 +1,11 @@
 [Core.Log]
-LogGameplayEvents=Log
+LogGameplayEvents=Verbose
+LogDemo=Verbose
+LogObjectives=Verbose
+LogGameMode=Verbose
+LogNet=Verbose
+LogINSGameInstance=Verbose
+LogUObjectGlobals=Verbose
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 MaxInternetClientRate=70000
