Update Admins.txt and Game.ini

--- a/Insurgency/Saved/Config/WindowsServer/Game.ini
+++ b/Insurgency/Saved/Config/WindowsServer/Game.ini
@@ -33,6 +33,7 @@ MaxSpectators=8
 ;bEnableBTAITasks=False
 ;bFinishMoveOnGoalOverlap=False
 
+
 [/Script/AIModule.AIController]
 ;Allow strafe when bot is camping and not navigating
 ;Enable this to make bot deadly when they walk in the checkpoint where bot is camping
@@ -110,6 +111,15 @@ bAllowLoadoutSaving=False
 MaxSupply=200
 bOverrideMaxSupply=False
 InitialSupply=18
+
+
+;[/Script/Insurgency.FireSupportArtillery]
+;NumProjectiles=XX
+
+
+[/Script/Insurgency.RestrictedArea]
+bEnabled=False
+bShowOnMinimap=True
 
 
 [/Script/Insurgency.INSGameMode]
@@ -434,11 +444,11 @@ bLoseWhenAllPlayersDead=True
 MaxPlayersToScaleEnemyCount=8
 
 ;Adjust AI Difficulty (0.0 - 1.0)
-AIDifficulty=0.65
+AIDifficulty=0.65 ; Need to find the balance where bots are challenging but don't have superhuman reaction times and accuracy
 
 ;Make bot follows player loadouts
 ;Its useful for pistol only or shotgun only mutator (Enable this so the mutator rule will apply to bot too)
-bBotsUseHumanLoadouts=True
+bBotsUseHumanLoadouts=True ; Makes bots follow mutator settings
 
 ;Restrict the class depends on the player level
 bRestrictClassByPlayerLevel=False
@@ -446,7 +456,7 @@ bRestrictClassByPlayerLevel=False
 
 [/Script/Insurgency.INSCheckpointGameMode]
 ;Each objective round time
-RoundTime=1080
+RoundTime=1080 ; Increased round time for each objective
 
 ;Checkpoint defense timer (sec)
 DefendTimer=90
