Update Engine.ini and Game.ini

--- a/Insurgency/Saved/Config/LinuxServer/Engine.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Engine.ini
@@ -1,13 +1,14 @@
 ;Logging and also show in console
 ;Different kind of log like Log, Display, Verbose, VeryVerbose
 [Core.Log]
-LogGameplayEvents=Verbose
-LogDemo=Verbose
-LogObjectives=Verbose
-LogGameMode=Verbose
-LogNet=Verbose
-LogINSGameInstance=Verbose
-LogUObjectGlobals=Verbose
+LogGameplayEvents=Display
+LogDemo=Display
+LogObjectives=Display
+LogGameMode=Display
+LogNet=Display
+LogINSGameInstance=Display
+LogUObjectGlobals=Display
+
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 MaxInternetClientRate=70000
@@ -18,8 +19,9 @@ NetServerMaxTickRate=128
 LanServerMaxTickRate=128
 
 ;Connection TimeOut Time
-ConnectionTimeout=80.0
-InitialConnectTimeout=150.0
+ConnectionTimeout=80
+InitialConnectTimeout=150
+
 
 ;https://docs.unrealengine.com/en-US/API/Runtime/PacketHandler/FDDoSDetection/index.html
 [DDoSDetection]
@@ -29,44 +31,51 @@ DDoSLogSpamLimit=64
 HitchTimeQuotaMS=500
 HitchFrameTolerance=3
 
+
 [/Script/Engine.Engine]
-bAllowMatureLanguage=False
+bAllowMatureLanguage=True
 bSmoothFrameRate=True
+
 
 ;https://docs.unrealengine.com/en-US/API/Runtime/AIModule/Navigation/UCrowdManager/index.html
 ;make AI into squad/group (Need testing)
 [/Script/AIModule.CrowdManager]
 bResolveCollisions=True
 ;Radius to gather agents
-MaxAgentRadius=2000.0
+;MaxAgentRadius=2000.0
 ;Max number of agents in a group
-MaxAgents=4
-MaxAvoidedAgents=2
+;MaxAgents=4
+;MaxAvoidedAgents=2
+
 
 [URL]
 ;Game port
-Port=27102
+;Port=27102
+
 
 [OnlineSubsystemSteamNWI]
 ;Queryport for steam
-GameServerQueryPort=27131
+;GameServerQueryPort=27131
 ;Enable VAC on server or not
-bVACEnabled=1
+bVACEnabled=0
+
 
 ;Override the maxplayer amount (No longer need in new version)
 ;[SystemSettings]
-;net.MaxPlayersOverride=20
+net.MaxPlayersOverride=10
+
 
 [/Script/Insurgency.INSWorldSettings]
 bShowBreath=True
 ;Map always night map
 bAlwaysNight=False
 ;Allow random lighting scenario (Day/Night map)
-bRandomLightingScenario=True
+bRandomLightingScenario=False
+
 
 ;Support modding for server side
 ;https://insurgencysandstorm.mod.io/guides/server-admin-guide
 [/Script/ModKit.ModIOClient]
 bHasUserAcceptedTerms=True
 bCachedUserDetails=True
-AccessToken=TOKEN HERE
+AccessToken=[TOKEN HERE]
