--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -1,9 +1,13 @@
+; Semi-hardcore config; use with SlowMovement (SlowCaptureTimes is built-in here) and Vampirism?Vampirism_MaxHealth=300
+
+
 ;Enable rcon for the server
 [Rcon]
 bEnabled=True
-Password=ins_sandstorm_password_yadiyadanana
-ListenPort=29099
-bAllowConsoleCommands=True
+;Password=[PASSWORD HERE]
+;ListenPort=27102
+MaxPasswordAttempts=1000
+IncorrectPasswordBanTime=5
 
 
 ;To remove movement lag and stutter on server
@@ -15,8 +19,8 @@ bMovementTimeDiscrepancyResolution=false
 ;GameSession (Exist but doesn't work)
 [/Script/Engine.GameSession]
 ;MaxPlayers currently limited by the server
-MaxPlayers=50
-MaxSpectators=0
+MaxPlayers=8
+MaxSpectators=8
 
 
 ;AISystem for bot when bot move and navigating to each path
@@ -24,54 +28,55 @@ MaxSpectators=0
 ;Strafing = bot spray and suppress and shoot faster while walking and runing
 ;Enable this if u want ur bot to shoot player instantly when they walking/running
 ;This doesn't change bot accuracy but also reveal bot location to players if they spray and miss
-bAllowStrafing=False
-bAcceptPartialPaths=True
-bEnableBTAITasks=False
-bFinishMoveOnGoalOverlap=False
+;bAllowStrafing=False
+;bAcceptPartialPaths=True
+;bEnableBTAITasks=False
+;bFinishMoveOnGoalOverlap=False
+
 
 [/Script/AIModule.AIController]
 ;Allow strafe when bot is camping and not navigating
 ;Enable this to make bot deadly when they walk in the checkpoint where bot is camping
 ;Bot will instant shoot them and spray on them
-bAllowStrafe=True
-bLOSflag=True
-bSkipExtraLOSChecks=False
-bWantsPlayerState=True
-bAdvancedTactics=True
-bSetControlRotationFromPawnOrientation=True
+;bAllowStrafe=False
+;bLOSflag=True
+;bSkipExtraLOSChecks=False
+;bWantsPlayerState=True
+;bAdvancedTactics=True
+;bSetControlRotationFromPawnOrientation=True
 
 
 [/Script/AIModule.AIPerceptionComponent]
 ;Change other AI info to make AI deadly
-HearingRange=768
-SightRadius=3000
-LoseSightRadius=3500
-LoSHearingRange=1500
+;HearingRange=768
+;SightRadius=3000
+;LoseSightRadius=3500
+;LoSHearingRange=1500
 
 ;Change AI Vision Angle
-PeripheralVisionAngle=360
+;PeripheralVisionAngle=124
 
 
 [/Script/AIModule.AISenseConfig_Hearing]
-HearingRange=768
-LoSHearingRange=1500
+;HearingRange=768
+;LoSHearingRange=1500
 
 
 [/Script/AIModule.AISenseConfig_Sight]
 ;Change other AI sight config
-SightRadius=3000
-LoseSightRadius=3500
+;SightRadius=3000
+;LoseSightRadius=3500
 
 ;Change AI Vision Angle Degree for sight
-PeripheralVisionAngleDegrees=360
+;PeripheralVisionAngleDegrees=124
 
 ;Last seen location (Default -1)
-AutoSuccessRangeFromLastSeenLocation=500
+;AutoSuccessRangeFromLastSeenLocation=500
 
 
 [/Script/AIModule.EnvQueryManager]
 ;Lower the interval will check the environment faster but will eat up ur CPU resource
-QueryCountWarningInterval=5.0
+;QueryCountWarningInterval=5.0
 
 
 [/script/Insurgency.INSGameInstance]
@@ -86,38 +91,47 @@ QueryCountWarningInterval=5.0
 
 
 [/Script/Insurgency.Mutator_HeadshotOnly]
-bCheckMeleeDamage=False
+bCheckMeleeDamage=True
 
 
 [/Script/Insurgency.Mutator_HotPotato]
 GrenadeClass="/Game/Game/Actors/Projectiles/BP_Projectile_M67.BP_Projectile_M67_C"
 ThrowbackWeaponClass="/Game/Game/Actors/Weapons/Grenade/BP_Grenade_M67.BP_Grenade_M67_C"
-bIgnoreHeadshots=False
-bBotsOnly=False
+bIgnoreHeadshots=True
+bBotsOnly=True
 
 
 [/Script/Insurgency.Mutator_Vampirism]
 bCountFriendlyFire=False
-MaxHealth=1000
+MaxHealth=300
 
 
 [/Script/Insurgency.Mutator_SupplyBase]
 bAllowLoadoutSaving=False
-MaxSupply=999
+MaxSupply=200
 bOverrideMaxSupply=False
 InitialSupply=18
 
 
+;[/Script/Insurgency.FireSupportArtillery]
+;NumProjectiles=XX
+
+
+[/Script/Insurgency.RestrictedArea]
+bEnabled=False
+bShowOnMinimap=True
+
+
 [/Script/Insurgency.INSGameMode]
 ;Server Hostname (If you don't want to use -hostname param)
-ServerHostname="[INS] Coop (www.insurgency.pro)"
-Rulesets = ""
+;ServerHostname="[INS] Coop (www.insurgency.pro)"
+;Rulesets = ""
 
 ;Does this gamemode support solo wave system?
 bSupportsSoloWaves=True
 
 ;Turn on KillFeed/Deathmessage in top right
-bKillFeed=True
+bKillFeed=False
 bKillFeedSpectator=True
 
 ;Turn on killer info (Show killer weapon, name, and distance when you died)
@@ -130,6 +144,7 @@ MinimumTotalFriendlyFireDamageToReflect=20
 TeamKillLimit=3
 TeamKillGrace=0.2
 TeamKillReduceTime=90
+FriendlyFireModifier=0.1
 
 ;Chat message
 bDeadSay=True
@@ -141,13 +156,13 @@ bVoiceEnemyHearsLocal=True
 
 ;Objective time
 ;Time require to capture the objective in seconds
-ObjectiveCaptureTime=30
+ObjectiveCaptureTime=30 ; Built-in SlowCaptureTimes feature
 ;Objective reset when nobody on the capture point (-1 to disable)
 ObjectiveResetTime=-1
 ;Speed up 25% per player on objective
 ObjectiveSpeedup=0.25
 ;Max amount of players for speed up. If 25% with 4 players then its 25 x 4 = 100% then that's mean double the speed up with 4 players
-ObjectiveMaxSpeedupPlayers=4
+ObjectiveMaxSpeedupPlayers=4 ; For 8-player server
 ;Not sure wat this radio thing is
 ObjectiveRadioSpeedup=0.6
 
@@ -160,7 +175,7 @@ FloatingObjectiveVisibility=1
 
 ;Use Restricted area in game or not (Best to have it off for Coop and have it on for PvP)
 ;Somehow it not working
-bAllowRestrictedAreas=False
+bAllowRestrictedAreas=True
 bDisableRestrictedAreasOnWaveDepletion=True
 
 ;Spawn Protection
@@ -173,7 +188,7 @@ LoseSpawnProtectionOnMoveGrace=5.0
 bDisableVehicles=False
 
 ;Amount of time in seconds before weapon on group dissapear
-DroppedWeaponLifespan=90
+;DroppedWeaponLifespan=10 ; Really only need to reduce bot-dropped weapon lifespan; not doing so counteracts the Quartermaster gamemode
 
 ;Others
 WarmupEnterTime=0.0
@@ -191,6 +206,7 @@ bStartPlayersAsSpectators=False
 bAutoRecordReplaysDedicated=True
 bHandleDedicatedServerReplays=True
 
+;------------Change the following values to 1 to save time------------
 ;Pregame time (Before the first round)
 GameStartingIntermissionTime=30
 
@@ -199,25 +215,30 @@ GameStartingIntermissionTime=30
 PreRoundTime=10
 PostRoundTime=15
 PostGameTime=15
+;How long the screen for exp to show up
+PostGameTimeExp=15
+PostGameTimeMatch=5
+WinTime=5
+;------------Change the above values to 1 to save time------------
 
 ;Friendly Fire
 bAllowFriendlyFire=True
-FriendlyFireModifier=0.2
+FriendlyFireModifier=0.1
 FriendlyFireReflect=0
 
 ;Map (Only 1 of them can be true)
 bMapVoting=True
-bUseMapCycle=False
+bUseMapCycle=True
 
 ;Allow players to talk to other team (PvP)
 bVoiceIntermissionAllowAll=True
 
 ;AFK (Idle) Time
-IdleLimit=150
-IdleLimitLowReinforcements=90
-IdleLimitLastOneStandingCombatZone=60
-IdleLimitLastOneStandingSpawnZone=10
-IdleCheckFrequency=30
+IdleLimit=600
+IdleLimitLowReinforcements=600
+IdleLimitLastOneStandingCombatZone=600
+IdleLimitLastOneStandingSpawnZone=600
+IdleCheckFrequency=600
 bCheckLastPersonStanding=True
 
 ;Leaver penalty
@@ -233,13 +254,13 @@ RoundLimit=3
 
 ;Total win for each map before map change
 WinLimit=1
-;bRoundWonOnceWinLimitReached
+;bRoundWonOnceWinLimitReached=True
 
 bResetPointsEachRound=False
 
 ;Supply point
 InitialSupply=18
-MaximumSupply=50
+MaximumSupply=200
 
 ;Gain Supply point
 bSupplyGainEnabled=True
@@ -254,10 +275,10 @@ bAllowThirdPersonSpectate=True
 bAllowDeathCamera=True
 
 ;Other Time
-GameTimeLimit=-1
-bOvertime=False
-OvertimeTime=60
-TeamSwitchTime=10
+;GameTimeLimit=-1
+;bOvertime=False
+;OvertimeTime=60
+;TeamSwitchTime=10
 
 ;Advance spawning (Not sure how this work)
 bUsesAdvancedSpawning=True
@@ -269,16 +290,12 @@ SwitchTeamsEveryRound=0
 ScoreboardConfig=(bDisplayRoundsWon=True,bDisplayTeamScore=True,bDisplayTeamPoints=True,PointsText="",bDisplayPlayerScore=True,bDisplayPlayerKAD=True,bDisplayPlayerObjectives=True,bAlwaysShowExtendedInfo=True,bDisplayObjectiveBriefing=True)
 
 ;Other stuff
-bIgnoreBotPurge=False
-bIgnoreRoundOver=False
+;bIgnoreBotPurge=False
+;bIgnoreRoundOver=False
 
 ;Some scoring system (Not sure what this is)
-bUsePlayerStartScoring=False
-MaxPlayerStartsToScore=20
-
-;How long the screen for exp to show up
-PostGameTimeExp=15
-PostGameTimeMatch=2
+;bUsePlayerStartScoring=False
+;MaxPlayerStartsToScore=20
 
 ;Changing the way to earn score
 ScoringAmounts=(("Kill", 10),("OffensiveKill", 5),("DefensiveKill", 5),("Assist", 5),("DriverAssist", 5),("FireSupportKill", 5),("ObjectiveCapture", 50),("ObjectiveDestroy", 100),("ObjectiveReset", 20),("ObjectiveCaptureTick", 10),("ObjectiveResetTick", 10))
@@ -286,8 +303,8 @@ ScoringAmounts=(("Kill", 10),("OffensiveKill", 5),("DefensiveKill", 5),("Assist"
 ;Automatic assign player class instead of letting them pick (I think only work if bAllowPlayerTeamSelect is true)
 bPromptKitMenuIfAutoAssignedClass=False
 bAutoAssignClass=False
-;bAutoAssignTeams
-;bAllowUnbalancedTeams
+bAutoAssignTeams=False
+bAllowUnbalancedTeams=True
 
 ;Allow fire support or not
 bFireSupportAllowed=True
@@ -307,8 +324,6 @@ bFireSupportAllowed=True
 ;bCanBeDamaged=False
 ;bReplicateMovement=False
 ;bTearOff=False
-
-
 
 
 [/Script/Insurgency.INSPushGameMode]
@@ -389,7 +404,7 @@ bUseVehicleInsertion=True
 
 ;Total bots (Scale with amount of players)
 MinimumEnemies=6
-MaximumEnemies=20
+MaximumEnemies=30 ; A very high bot count cripples frame rate
 
 ;Allow friendly bots
 ;The following will require bBots enabled to use it
@@ -411,37 +426,37 @@ SoloRoundTime=1080
 ;Enable solo waves system even if we're not playing in solo
 bForceSoloWaves=True
 ;Amount of wave player get when game start (Require bForceSolowaves)
-SoloWaves=0
+SoloWaves=2
 ;Reinforcement time in second for each wave (Require bForceSolowaves)
-SoloReinforcementTime=60
+SoloReinforcementTime=300
 ;Increase the total amount of wave each objective is captured or destroyed (Require bForceSolowaves)
-SoloWaveIncrementOnObjectiveCapture=0
+SoloWaveIncrementOnObjectiveCapture=2
 
 ;Lose when all players dead.
 bLoseWhenAllPlayersDead=True
 
 ;Amount of time bot go alert (When they alert they seem to shoot at player more)
 ;Default is 15
-AlarmDuration=60
+;AlarmDuration=15
 
 ;Scale the min and max enemies with this amount of players
 ;If set to 8 then regardless if u have more than 8 players or not, it will use the MaximumEnemies count when it reach 8 players in game
 MaxPlayersToScaleEnemyCount=8
 
 ;Adjust AI Difficulty (0.0 - 1.0)
-AIDifficulty=1.0
+AIDifficulty=0.65 ; Need to find the balance where bots are challenging but don't have superhuman reaction times and accuracy
 
 ;Make bot follows player loadouts
 ;Its useful for pistol only or shotgun only mutator (Enable this so the mutator rule will apply to bot too)
-bBotsUseHumanLoadouts=False
+bBotsUseHumanLoadouts=True ; Makes bots follow mutator settings
 
 ;Restrict the class depends on the player level
-bRestrictClassByPlayerLevel=True
+bRestrictClassByPlayerLevel=False
 
 
 [/Script/Insurgency.INSCheckpointGameMode]
 ;Each objective round time
-RoundTime=1080
+RoundTime=1080 ; Increased round time for each objective
 
 ;Checkpoint defense timer (sec)
 DefendTimer=90
@@ -457,13 +472,13 @@ RetreatTimer=10
 ;DPR is counter as amount of bot died before it trigger the spawning
 ;Example 0.2 = 20% of bots dead before it respawn the bot
 ;Set DPR to 1.0 = 100% of the bot died before it respawn the bot (However, that seem to bug out so setting 1.0 is to stop bot from respawning)
-RespawnDPR=1.0
-RespawnDelay=1
+;RespawnDPR=0.9
+;RespawnDelay=60
 
 ;Bot respawn for counter attack
 ;Set DPR 1.0 for counter attack to prevent bot from spawning for counter attack
-CounterAttackRespawnDPR=1.0
-CounterAttackRespawnDelay=0
+;CounterAttackRespawnDPR=0.9
+;CounterAttackRespawnDelay=60
 
 ;Bot will rush to the last objective after player captured/destroyed the last objective
 ;0 so bot will not rush and keep defense the next objective
@@ -475,25 +490,25 @@ bCounterAttackReinforce=False
 ;This will only trigger when player is on the capture point bot will respawn base on this
 ;Set multiplier to 0 will also prevent bot from spawning when capturing objective
 ;(1 = respawn all the bot. 0.5 = respawn half of the bots)
-ObjectiveTotalEnemyRespawnMultiplierMin=1
-ObjectiveTotalEnemyRespawnMultiplierMax=1
-FinalCacheBotQuotaMultiplier=1.5
+;ObjectiveTotalEnemyRespawnMultiplierMin=0.5
+;ObjectiveTotalEnemyRespawnMultiplierMax=1
+;FinalCacheBotQuotaMultiplier=1.5
 
 ;Bot ambush player (Not sure how this work. Probably bot will come rushing at player between these 2 ratios)
 ;Bot will ambush between 40% and 80% of bots are dead
 ;Default 0.8
-BotAmbushRatioCheckpointMaxDeaths=0.8
+;BotAmbushRatioCheckpointMaxDeaths=0.8
 ;Default 0.4
-BotAmbushRatioCheckpointMinDeaths=0.4
+;BotAmbushRatioCheckpointMinDeaths=0.4
 
 ;Other ambush config
-BotAmbushRatio=0.25
-BotAmbushRadius=5000
+;BotAmbushRatio=0.25
+;BotAmbushRadius=5000
 
 ;Bot attack range (Default 12000.0)
-BotTerritoryRadius=12000.0
+;BotTerritoryRadius=12000.0
 ;Bot wandering range when they didn't spot a player (Default 10000.0)
-BotWanderRadius =10000.0
+;BotWanderRadius =10000.0
 
 ;Use random counter attack type
 bUseRandomCounterAttackTypes=True
@@ -516,9 +531,9 @@ PlayersWhoHaveSpawnedWithLoadout = ""
 MinObjectiveForCrate=1
 MaxObjectiveForCrate=3
 
-;Amount of ammo box that spawn randomly in objective you captured or destroyed. 4 to 6 ammo box each objective
-MinAmmoPerObjective=4
-MaxAmmoPerObjective=6
+;Amount of ammo box that spawn randomly in objective you captured or destroyed. 4 to 6 ammo box each objective by default
+MinAmmoPerObjective=9
+MaxAmmoPerObjective=11
 ;Ammobox spawn chance 1.0 = 100%
 AmmoBoxSpawnChance=1.0
 
@@ -568,10 +583,10 @@ MinimumBotsPerCompletedWave=0.5
 MaximumBotsPerCompletedWave=1.0
 
 ;Bot respawn
-BotDPRRespawnFinal=0.1
-BotDPRRespawnFirst=0.3
+;BotDPRRespawnFinal=0.2
+;BotDPRRespawnFirst=0.5
 ;Minimum round time remaining required to use the DPR respawning for bots
-BotDPRMinimumTimeRemaining=15.0
+;BotDPRMinimumTimeRemaining=15.0
 
 ;Special wave
 bUseSpecialWaves=True
@@ -588,10 +603,10 @@ FireSupportMinimumTimeRemaining=20.0
 FireSupportMinimumTimeRemainingFinalWave=10.0
 
 ;Change player starting items
-StartingItems=((Item=/Game/Game/Actors/Weapons/SideArm/BP_Firearm_Makarov.BP_Firearm_Makarov_C))
+;StartingItems=((Item=/Game/Game/Actors/Weapons/SideArm/BP_Firearm_Makarov.BP_Firearm_Makarov_C))
 
 ;More example
-;StartingItems=((Item=/Game/Game/Actors/Weapons/SideArm/BP_Firearm_Makarov.BP_Firearm_Makarov_C),(Item=/Game/Game/Actors/Weapons/SniperRifle/BP_Firearm_Mosin.BP_Firearm_Mosin_C))
+StartingItems=((Item=/Game/Game/Actors/Weapons/SideArm/BP_Firearm_Makarov.BP_Firearm_Makarov_C),(Item=/Game/Game/Actors/Weapons/SniperRifle/BP_Firearm_Mosin.BP_Firearm_Mosin_C))
 
 
 [/Script/Insurgency.TeamInfo]
