--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -1,4 +1,4 @@
-; Semi-hardcore config; use with SlowMovement (SlowCaptureTimes is built-in here) and Vampirism?Vampirism_MaxHealth=300
+; Semi-hardcore config; use with SlowMovement (SlowCaptureTimes is built-in here) and Vampirism?MaxHealth=300
 
 
 ;Enable rcon for the server
@@ -188,7 +188,7 @@ LoseSpawnProtectionOnMoveGrace=5.0
 bDisableVehicles=False
 
 ;Amount of time in seconds before weapon on group dissapear
-;DroppedWeaponLifespan=10 ; Really only need to reduce bot-dropped weapon lifespan; not doing so counteracts the Quartermaster gamemode
+DroppedWeaponLifespan=90
 
 ;Others
 WarmupEnterTime=0.0
