--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -4,8 +4,8 @@
 ;Enable rcon for the server
 [Rcon]
 bEnabled=True
-;Password=[PASSWORD HERE]
-;ListenPort=27102
+Password=[PASSWORD HERE]
+ListenPort=[PORT HERE]
 MaxPasswordAttempts=1000
 IncorrectPasswordBanTime=5
 
