--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -139,8 +139,8 @@ bKillerInfo=True
 bKillerInfoRevealDistance=True
 
 ;Teamkill settings
-bEnforceFriendlyFireReflect=False
-MinimumTotalFriendlyFireDamageToReflect=20
+;bEnforceFriendlyFireReflect=False
+;MinimumTotalFriendlyFireDamageToReflect=20
 TeamKillLimit=3
 TeamKillGrace=0.2
 TeamKillReduceTime=90
@@ -188,7 +188,7 @@ LoseSpawnProtectionOnMoveGrace=5.0
 bDisableVehicles=False
 
 ;Amount of time in seconds before weapon on group dissapear
-DroppedWeaponLifespan=90
+DroppedWeaponLifespan=300
 
 ;Others
 WarmupEnterTime=0.0
@@ -208,7 +208,7 @@ bHandleDedicatedServerReplays=True
 
 ;------------Change the following values to 1 to save time------------
 ;Pregame time (Before the first round)
-GameStartingIntermissionTime=30
+GameStartingIntermissionTime=20
 
 ;Other Time
 ;PreRoundTime is the time you on the truck in the beginning of the game
@@ -224,7 +224,7 @@ WinTime=5
 ;Friendly Fire
 bAllowFriendlyFire=True
 FriendlyFireModifier=0.1
-FriendlyFireReflect=0
+;FriendlyFireReflect=0
 
 ;Map (Only 1 of them can be true)
 bMapVoting=True
@@ -242,9 +242,9 @@ IdleCheckFrequency=600
 bCheckLastPersonStanding=True
 
 ;Leaver penalty
-LeaverPenaltyPlayerLeaveTime=840
-LeaverPenaltyGameStartTimeLimit=60
-LeaverPenaltyPlayerLeftTimeLimit=120
+;LeaverPenaltyPlayerLeaveTime=840
+;LeaverPenaltyGameStartTimeLimit=60
+;LeaverPenaltyPlayerLeftTimeLimit=120
 
 ;Minimum player before the game start
 MinimumPlayers=1
@@ -301,9 +301,9 @@ ScoreboardConfig=(bDisplayRoundsWon=True,bDisplayTeamScore=True,bDisplayTeamPoin
 ScoringAmounts=(("Kill", 10),("OffensiveKill", 5),("DefensiveKill", 5),("Assist", 5),("DriverAssist", 5),("FireSupportKill", 5),("ObjectiveCapture", 50),("ObjectiveDestroy", 100),("ObjectiveReset", 20),("ObjectiveCaptureTick", 10),("ObjectiveResetTick", 10))
 
 ;Automatic assign player class instead of letting them pick (I think only work if bAllowPlayerTeamSelect is true)
-bPromptKitMenuIfAutoAssignedClass=False
-bAutoAssignClass=False
-bAutoAssignTeams=False
+;bPromptKitMenuIfAutoAssignedClass=True
+;bAutoAssignClass=True
+;bAutoAssignTeams=False
 bAllowUnbalancedTeams=True
 
 ;Allow fire support or not
@@ -403,8 +403,8 @@ RoundTimeExtension=300
 bUseVehicleInsertion=True
 
 ;Total bots (Scale with amount of players)
-MinimumEnemies=6
-MaximumEnemies=30 ; A very high bot count cripples frame rate
+MinimumEnemies=8
+MaximumEnemies=40 ; A very high bot count cripples frame rate
 
 ;Allow friendly bots
 ;The following will require bBots enabled to use it
@@ -426,11 +426,11 @@ SoloRoundTime=1080
 ;Enable solo waves system even if we're not playing in solo
 bForceSoloWaves=True
 ;Amount of wave player get when game start (Require bForceSolowaves)
-SoloWaves=2
+SoloWaves=1
 ;Reinforcement time in second for each wave (Require bForceSolowaves)
 SoloReinforcementTime=300
 ;Increase the total amount of wave each objective is captured or destroyed (Require bForceSolowaves)
-SoloWaveIncrementOnObjectiveCapture=2
+SoloWaveIncrementOnObjectiveCapture=1
 
 ;Lose when all players dead.
 bLoseWhenAllPlayersDead=True
