--- a/Insurgency/Saved/Config/LinuxServer/Engine.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Engine.ini
@@ -1,13 +1,13 @@
 ;Logging and also show in console
 ;Different kind of log like Log, Display, Verbose, VeryVerbose
 [Core.Log]
-LogGameplayEvents=Display
-LogDemo=Display
-LogObjectives=Display
-LogGameMode=Display
-LogNet=Display
-LogINSGameInstance=Display
-LogUObjectGlobals=Display
+LogGameplayEvents=Verbose
+LogDemo=Verbose
+LogObjectives=Verbose
+LogGameMode=Verbose
+LogNet=Verbose
+LogINSGameInstance=Verbose
+LogUObjectGlobals=Verbose
 
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
