--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -444,7 +444,8 @@ bLoseWhenAllPlayersDead=True
 MaxPlayersToScaleEnemyCount=8
 
 ;Adjust AI Difficulty (0.0 - 1.0)
-AIDifficulty=0.65 ; Need to find the balance where bots are challenging but don't have superhuman reaction times and accuracy
+AIDifficulty=0.5
+;AIDifficulty=0.65 ; Need to find the balance where bots are challenging but don't have superhuman reaction times and accuracy
 
 ;Make bot follows player loadouts
 ;Its useful for pistol only or shotgun only mutator (Enable this so the mutator rule will apply to bot too)
